2024-06-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add non-recursive negative rules (-<regex>)
	  - change semantic of unrestricted (recursive) negative rules
	  - refactor rule matching code
	  - improve output for --path-check and --dry-run
	  - improve file tree processing when using limit
	* Specify PCRE2 variant in README
	* Fix typo in macro name
	* Clean up #include statements

2024-06-15 Walter Doekes <walter+github@wjd.nu>
	* Fix escacped typo
	* Fix JSON escaping of filenames in different_attributes

2024-05-30 Michael Ruigrok <ruigrok.michael@gmail.com>
	* Fix grammar of a/an in aide.conf.5

2024-05-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix concurrent reading of extended attributes (xattrs)

2024-05-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Raise warning if both input databases are the same
	* Fix progress bar to show skipped entries for database_new

2024-04-27 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor progress bar code
	* Add check_progress unit test
	* Add missing library CFLAGS
	* Add basic check_base64 unit test
	* Remove unused length_base64 function
	* Remove AM_CFLAGS/AM_CPPFLAGS variables

2024-04-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add check_seltree unit test

2024-04-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix compiler warnings
	* Fix 64-bit time_t on 32-bit architectures
	* Fix typo in aide.conf manual page (closes: #165)

2024-01-17 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix debug logging for returned attributes

2024-01-14 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Code cleanup and log improvements

2024-01-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Code cleanup (remove strip_dbline function)

2024-01-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing command and option to --help output

2023-12-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Only remove incompletely written db file if it was created by aide