@@ -7,6 +7,7 @@
 	* Specify PCRE2 variant in README
 	* Fix typo in macro name
 	* Clean up #include statements
+	* Don't use glib specific TEMP_FAILURE_RETRY macro
 
 2024-06-15 Walter Doekes <walter+github@wjd.nu>
 	* Fix escacped typo
